<resources>
    <string name="app_name">MySickleCellApp</string>
    <string name="main_activity_description">Chat with your mentors, effortlessly.</string>

    <string name="login">Login</string>
    <string name="chat_with_mentor">Chat with a mentor</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">"You have received a notification"</string>

    <!-- MAIN ACTIVITY -->
    <string name="error_not_connected">You must log in!</string>
    <string name="error_authentication_canceled">Authentication canceled&#8230;</string>
    <string name="error_no_internet">No internet connection!</string>
    <string name="error_unknown_error">An unknown error occurred&#8230;</string>
    <string name="connection_succeed">Authentication successful!</string>
    <string name="button_login_text_logged">View Profile</string>
    <string name="button_login_text_not_logged">Login</string>

    <!-- LOGIN ACTIVITY -->
    <string name="toolbar_title_login_activity">Your Profile</string>
    <string name="text_input_username">Username</string>
    <string name="text_view_email">Email Address:</string>
    <string name="button_update_account">Update Username</string>
    <string name="button_delete_account">Delete My Account</string>
    <string name="button_sign_out_account">Sign Out</string>
    <string name="info_no_email_found">No email address found</string>
    <string name="info_no_username_found">No username found</string>
    <string name="popup_message_confirmation_delete_account">Are you sure you want to delete your account?</string>
    <string name="popup_message_choice_yes">Yes!</string>
    <string name="popup_message_choice_no">No</string>
    <string name="check_box_is_mentor">Are you a mentor?</string>

    <!-- MENTOR_CHAT ACTIVITY -->
    <string name="toolbar_title_mentor_chat_activity">Discussion Chats</string>
    <string name="text_input_title_mentor_chat_activity">Compose your message</string>
    <string name="button_title_mentor_chat_activity">SEND</string>
    <string name="text_view_mentor_chat_error">This discussion thread currently has no messages&#8230;</string>
    <string name="popup_title_permission_files_access">This application needs permission to function.</string>
    <string name="toast_title_no_image_chosen">No image chosen&#8230;</string>

    <!-- Book api -->
    <string name="thumbnail">thumbnail</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="price">40 $</string>
    <string name="author">Author</string>

    <string name="search">SEARCH</string>
    <string name="hint">Enter your query</string>
    <string name="description_image_view">Template for the image</string>
    <string name="description_divider">Divider</string>
    <string name="Failed_to_Load_data">Please check your Internet Connection</string>
    <string name="NO_RESULT">No matching results</string>

    <string-array name="fiche_type">
        <item>Consultation</item>
        <item>Hospitalization</item>
    </string-array>

    <string-array name="specialite_spinner">
        <item>Dentist</item>
        <item>General Physician</item>
        <item>ENT Specialist</item>
        <item>Ophthalmologist</item>
        <item>Pediatrician</item>
        <item>Radiologist</item>
        <item>Rheumatologist</item>
    </string-array>

    <string-array name="blood_spinner">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string name="coonect">Before\tconnecting,\tplease\tmake\tsure\tyour\n\t\tsmartphone\tis\tclose\tto\tthe\tIoT\tdevice</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_medicine">Medicine</string>
    <string name="title_schedule">Schedule</string>
    <string name="medicine_name">Medicine name</string>
    <string name="dosage_summary">Dosage</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="string_time">Time</string>
    <string name="medicine_name_hint">Medicine name</string>
    <string name="string_from">From</string>
    <string name="string_schedule">Schedule</string>
    <string name="pick_a_time">Pick a time</string>
    <string name="once_a_day">Once a day</string>
    <string name="twice_a_day">Twice a day</string>
    <string name="thrice_a_day">Thrice a day</string>
    <string name="_4_times_a_day">4 times a day</string>
    <string name="_5_times_per_day">5 times per day</string>
    <string name="number_of_total_doses">Number of total doses</string>
    <string name="sample_date">Thu, September 13 2018</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="time_to_take">Time to take&#160;</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>
    <string name="take">Take</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="both">Both</string>
    <string name="alert_type">Alert type</string>
    <string name="title_profile">Profile</string>
    <string name="edit_medicine">EditMedience</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="hospitalisation">Hospitalisation</string>
    <!--<string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
        -->
</resources>
